2010-03-23  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 2.10.
	* NEWS: Update.

2010-03-23  Ben Walton  <bwalton@cquest.utoronto.ca>

	* tmpwatch.c (check_fuser): s/FUSER_PATH/FUSER/ in one more place.

2010-03-22  Miloslav Trmač  <mitr@redhat.com>

	* tmpwatch.c (check_fuser): Move the check for FUSER existence from
	callers.  Only check if FUSER exists once.  All callers updated.

	* configure.ac: Check if fuser supports -s.
	* tmpwatch.c (check_fuser): Redirect stdout and stderr instead of using
	-s if !FUSER_ACCEPTS_S.
	All based on a patch by Ben Walton <bwalton@artsci.utoronto.ca>
	(FUSER_ARGS): Remove, simply use "-s" directly.

	* configure.ac: Search for fuser, check if it works.  Define FUSER.
	* tmpwatch.c: Remove FUSER_PATH.  Replace all uses with FUSER.
	(check_fuser): Just #define to 0 if !FUSER.
	(usage): Mention --fuser if supported.
	(main): Only recognize --fuser if supported.
	All based on a patch by Ben Walton <bwalton@artsci.utoronto.ca>

2010-03-12  Miloslav Trmač  <mitr@redhat.com>

	* m4/gnulib-cache.m4 (gl_MODULES): Add `progname'.
	* tmpwatch.c (main): Call set_program_name.

2010-03-09  Miloslav Trmač  <mitr@redhat.com>

	* lib/strerror.c: Fix missing #include <limits.h>.

2010-03-03  Miloslav Trmač  <mitr@redhat.com>

	* tmpwatch.c (struct exclusion): Use `const char *' for `dir' and
	`file'.
	(message): Use `const char *' for `format'.
	(cleanupDirectory): Don't use two local variables named `dir'.
	(usage): Use attribute__((noreturn)).

	* tmpwatch.c (xmalloc): Remove (use the gnulib implementation).
	(absolute_path): Use xstrdup() from gnulib.
	* m4/gnulib-cache.m4 (gl_MODULES): Add `xalloc'.

	* AUTHORS: New file.
	* configure.ac, Makefile.am: New files, based on patches by Ben
	Walton <bwalton@artsci.utoronto.ca>.
	* tmpwatch.c: #include <config.h>.  Guard <mntent.h> and <paths.h>
	with HAVE_MNTENT_H and HAVE_PATHS_H.  Use PACKAGE_VERSION.  Based
	on patches by Ben Walton <bwalton@artsci.utoronto.ca>.
	* install-sh